# flightGL

./: CMakeLists.txt  README.md  app.toml  game.toml
include/: application.hpp  body.hpp  game.hpp  renderer.hpp  window.hpp
shader/: shader.frag  shader.vert
src/: application.cxx  body.cxx  game.cxx  main.cxx  renderer.cxx  window.cxx
